1. Fix the secondary navigation menu layout issue on Safari, which show the menu item in the middle of the page instead of left.

--- a/src/client/utm/css/utm_style.css
+++ b/src/client/utm/css/utm_style.css
@@ -126,6 +126,7 @@ input, textarea {
 
 #oa_2_nav ul {
     float: left;
+	width: 940px;
     border: 0;
     padding: 5px;
     margin: 0;
